--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,12 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+.DS_Store
+
+# React Router
+/.react-router/
+/build/
+
+# sst
+.sst
