--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
+    "dev": "sst dev",
+    "deploy": "sst deploy",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
     "prepare": "husky"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.927.0",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "isbot": "^5.1.31",
     "node-fetch": "^3.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.2",
-    "sst": "3.17.23"
+    "react-router": "^7.9.2"
   },
   "lint-staged": {
     "*": "prettier --write"
@@ -31,6 +32,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
+    "sst": "^3.17.23",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
