--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node-fetch": "^3.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.2"
+    "react-router": "^7.9.2",
+    "sharp": "^0.34.5"
   },
   "lint-staged": {
     "*": "prettier --write"
