--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "isbot": "^5.1.31",
+    "jimp": "^1.6.0",
     "node-fetch": "^3.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.2",
-    "sharp": "^0.34.5"
+    "react-router": "^7.9.2"
   },
   "lint-staged": {
     "*": "prettier --write"
